// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataAccess should correctly identify series and slices for: AreaChart - arithmetic measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - single measure with two viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 6,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > Amount",
      "Educationly > Amount",
      "Explorer > Amount",
      "Grammar Plus > Amount",
      "PhoenixSoft > Amount",
      "WonderKid > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "East Coast",
      "West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - single measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - single measure with viewBy and stackBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 6,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > Amount",
      "Educationly > Amount",
      "Explorer > Amount",
      "Grammar Plus > Amount",
      "PhoenixSoft > Amount",
      "WonderKid > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "East Coast",
      "West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - two measures with undefined values 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 7,
    "attributes": 1,
    "sliceNames": Array [
      "2010",
      "2011",
      "2012",
      "2013",
      "2014",
      "2016",
      "2017",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - two measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - two measures with viewBy sorted by attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: AreaChart - two measures with viewBy sorted by measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "PhoenixSoft",
      "WonderKid",
      "Grammar Plus",
      "Educationly",
      "CompuSci",
      "Explorer",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - arithmetic measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - four measures and PoP 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 5,
    "attributes": 0,
    "measures": 5,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Won Last Year",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 7,
    "attributes": 1,
    "sliceNames": Array [
      "2010",
      "2011",
      "2012",
      "2013",
      "2014",
      "2016",
      "2017",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - single measure with two viewBy and stack 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 12,
    "attributes": 2,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > East Coast > Amount",
      "CompuSci > West Coast > Amount",
      "Educationly > East Coast > Amount",
      "Educationly > West Coast > Amount",
      "Explorer > East Coast > Amount",
      "Explorer > West Coast > Amount",
      "Grammar Plus > East Coast > Amount",
      "Grammar Plus > West Coast > Amount",
      "PhoenixSoft > East Coast > Amount",
      "PhoenixSoft > West Coast > Amount",
      "WonderKid > East Coast > Amount",
      "WonderKid > West Coast > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "Direct Sales",
      "Inside Sales",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - single measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - single measure with viewBy and stackBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 6,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > Amount",
      "Educationly > Amount",
      "Explorer > Amount",
      "Grammar Plus > Amount",
      "PhoenixSoft > Amount",
      "WonderKid > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "East Coast",
      "West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 6,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > Amount",
      "Educationly > Amount",
      "Explorer > Amount",
      "Grammar Plus > Amount",
      "PhoenixSoft > Amount",
      "WonderKid > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "East Coast",
      "West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - themed with popup legend 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 43,
    "attributes": 1,
    "sliceNames": Array [
      "1000Bulbs.com",
      "101 Financial",
      "123 Exteriors",
      "14 West",
      "1-800 Postcards",
      "1-800 We Answer",
      "1-888-OhioComp",
      "1 Source Consulting",
      "1Source International",
      "1st Choice Staffing & Consulting",
      "1st in Video - Music World",
      "2HB Software Designs",
      "2 Wheel Bikes",
      "352 Media Group",
      "3balls.com",
      "3dCart Shopping Cart Software",
      "3Degrees",
      "3E",
      "49er Communications",
      "4th Source",
      "4Wall Entertainment",
      "5LINX Enterprises",
      "614 Media Group",
      "6K Systems",
      "720 Strategies",
      "7-Eleven",
      "7 Medical Systems",
      "7 Simple Machines",
      "90octane",
      "919 Marketing",
      "A10 Clinical Solutions",
      "A10 Networks",
      "A1 Pool Parts",
      "A-1 Textiles",
      "AAC Enterprises",
      "Aaron Oil Company",
      "Aaron's",
      "Aaron's Sales and Lease",
      "Aaron's Sales and Lease Ownership",
      "Aaron's Sales & Lease Ownership",
      "AArrow Advertising",
      "Aasent Mortgage Corporation",
      "Abacus 24-7",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - two measures with two viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 12,
    "attributes": 2,
    "sliceNames": Array [
      "CompuSci > East Coast",
      "CompuSci > West Coast",
      "Educationly > East Coast",
      "Educationly > West Coast",
      "Explorer > East Coast",
      "Explorer > West Coast",
      "Grammar Plus > East Coast",
      "Grammar Plus > West Coast",
      "PhoenixSoft > East Coast",
      "PhoenixSoft > West Coast",
      "WonderKid > East Coast",
      "WonderKid > West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - two measures with two viewBy, filtered to single value 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 1,
    "attributes": 2,
    "sliceNames": Array [
      "WonderKid > East Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - two measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - two measures with viewBy sorted by attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - two measures with viewBy sorted by measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "PhoenixSoft",
      "WonderKid",
      "Grammar Plus",
      "Educationly",
      "CompuSci",
      "Explorer",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BarChart - viewBy date and PoP measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Won Last Year",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 7,
    "attributes": 1,
    "sliceNames": Array [
      "2010",
      "2011",
      "2012",
      "2013",
      "2014",
      "2016",
      "2017",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - arithmetic measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
      " > Probability",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - x and y axis and size measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
      " > Probability",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - x and y axis and size measures with viewBy and sorted by attr 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
      " > Probability",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - x and y axis and size measures with viewBy with nulls in data 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
      " > Probability",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 7,
    "attributes": 1,
    "sliceNames": Array [
      "2010",
      "2011",
      "2012",
      "2013",
      "2014",
      "2016",
      "2017",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - x and y axis measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - x axis and size measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Probability",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - x axis measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - x axis measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BubbleChart - y axis and size measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Probability",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - primary and comparative measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Won",
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - primary and target measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Won",
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - primary and target measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Won",
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - primary measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - primary, target and comparative measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Won",
      " > Amount",
      " > Calculated 'Lost' measure",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - primary, target and comparative measures with two viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Won",
      " > Amount",
      " > Calculated 'Lost' measure",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 12,
    "attributes": 2,
    "sliceNames": Array [
      "CompuSci > East Coast",
      "CompuSci > West Coast",
      "Educationly > East Coast",
      "Educationly > West Coast",
      "Explorer > East Coast",
      "Explorer > West Coast",
      "Grammar Plus > East Coast",
      "Grammar Plus > West Coast",
      "PhoenixSoft > East Coast",
      "PhoenixSoft > West Coast",
      "WonderKid > East Coast",
      "WonderKid > West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - primary, target and comparative measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Won",
      " > Amount",
      " > Calculated 'Lost' measure",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - primary, target and comparative measures with viewBy and sort 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Won",
      " > Amount",
      " > Calculated 'Lost' measure",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: BulletChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Won",
      " > Amount",
      " > Calculated 'Lost' measure",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - arithmetic measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - dense chart with two view by 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > m_fact.opportunitysnapshot.amount_sum",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 215,
    "attributes": 2,
    "sliceNames": Array [
      "CompuSci > AdvancedMD Software > CompuSci",
      "CompuSci > AdvantageBridal.com > CompuSci",
      "CompuSci > Aerial Services > CompuSci",
      "CompuSci > agencyQ > CompuSci",
      "CompuSci > Air Innovations > CompuSci",
      "CompuSci > Ali International > CompuSci",
      "CompuSci > allConnex > CompuSci",
      "CompuSci > American Bancard > CompuSci",
      "CompuSci > American Communications > CompuSci",
      "CompuSci > American Technologies > CompuSci",
      "CompuSci > Art & Logic > CompuSci",
      "CompuSci > ASI System Integration > CompuSci",
      "CompuSci > Billtrust > CompuSci",
      "CompuSci > Boston Health Economics > CompuSci",
      "CompuSci > Bronto Software > CompuSci",
      "CompuSci > Burstabit Technologies > CompuSci",
      "CompuSci > BusinessOnLine > CompuSci",
      "CompuSci > Cahill Gordon & Reindel > CompuSci",
      "CompuSci > Canyon Manufacturing Services > CompuSci",
      "CompuSci > Cash Cycle Solutions > CompuSci",
      "CompuSci > C&I Engineering > CompuSci",
      "CompuSci > Compliance Implementation Services > CompuSci",
      "CompuSci > Convergence Consulting Group > CompuSci",
      "CompuSci > CPX Interactive > CompuSci",
      "CompuSci > C&S Companies > CompuSci",
      "CompuSci > CyberData Technologies > CompuSci",
      "CompuSci > Davis Polk & Wardwell > CompuSci",
      "CompuSci > DestinationWeddings.com > CompuSci",
      "CompuSci > Docutrend Imaging Solutions > CompuSci",
      "CompuSci > EGB Systems & Solutions > CompuSci",
      "CompuSci > Emmi Solutions > CompuSci",
      "CompuSci > Excalibur Technology > CompuSci",
      "CompuSci > First In Service Travel > CompuSci",
      "CompuSci > Flipswap > CompuSci",
      "CompuSci > Greenberg Traurig > CompuSci",
      "CompuSci > GTM Sportswear > CompuSci",
      "CompuSci > Hinshaw & Culbertson > CompuSci",
      "CompuSci > Interbit Data > CompuSci",
      "CompuSci > iPipeline > CompuSci",
      "CompuSci > Kansas City Home Care > CompuSci",
      "CompuSci > LasX Industries > CompuSci",
      "CompuSci > National Asset Recovery Services > CompuSci",
      "CompuSci > Paylocity > CompuSci",
      "CompuSci > Shorts Brewing > CompuSci",
      "CompuSci > TechSource > CompuSci",
      "Educationly > 3balls.com > Educationly",
      "Educationly > 7-Eleven > Educationly",
      "Educationly > Acadian Ambulance Service > Educationly",
      "Educationly > AdvenTech > Educationly",
      "Educationly > Advocate Radiology Billing > Educationly",
      "Educationly > AEEC > Educationly",
      "Educationly > AirSplat > Educationly",
      "Educationly > Allconnect > Educationly",
      "Educationly > All Copy Products > Educationly",
      "Educationly > American Business Solutions > Educationly",
      "Educationly > Arrowhead Advertising > Educationly",
      "Educationly > Arrow Strategies > Educationly",
      "Educationly > Aspire Systems > Educationly",
      "Educationly > ASP Pool and Spa > Educationly",
      "Educationly > Aware Web Solutions > Educationly",
      "Educationly > Baseball Rampage > Educationly",
      "Educationly > BeQuick Software > Educationly",
      "Educationly > Big Red Fasteners > Educationly",
      "Educationly > Blaser's USA > Educationly",
      "Educationly > Blinc > Educationly",
      "Educationly > Cadena Contracting > Educationly",
      "Educationly > Cafe Rio > Educationly",
      "Educationly > Cascades Technologies > Educationly",
      "Educationly > Catapult Technology > Educationly",
      "Educationly > Clearpointe > Educationly",
      "Educationly > CloseOutStore.net > Educationly",
      "Educationly > Cowan & Associates > Educationly",
      "Educationly > CPower > Educationly",
      "Educationly > Crescent City Packaging > Educationly",
      "Educationly > Cyquent > Educationly",
      "Educationly > DataDirect Networks > Educationly",
      "Educationly > Defran Systems > Educationly",
      "Educationly > Diplomaframe.com > Educationly",
      "Educationly > Discount Ramps.com > Educationly",
      "Educationly > Dull Olson Weekes Architects > Educationly",
      "Educationly > eVestment Alliance > Educationly",
      "Educationly > Global Medical Imaging > Educationly",
      "Educationly > Great Expressions Dental Centers > Educationly",
      "Educationly > Holland & Hart > Educationly",
      "Educationly > HSP Direct > Educationly",
      "Educationly > Iasta > Educationly",
      "Educationly > ICON Information Consultants > Educationly",
      "Educationly > InterMed Biomedical Services > Educationly",
      "Educationly > Judicial Correction Services > Educationly",
      "Educationly > LAgraphico > Educationly",
      "Educationly > Liquid Web > Educationly",
      "Educationly > MediGain > Educationly",
      "Educationly > Milestone Metals > Educationly",
      "Educationly > Mortgagebot > Educationly",
      "Educationly > OnDemand Resources > Educationly",
      "Educationly > Rabbit Air > Educationly",
      "Educationly > Sentek Global > Educationly",
      "Educationly > TalentBurst > Educationly",
      "Explorer > 14 West > Explorer",
      "Explorer > 3Degrees > Explorer",
      "Explorer > 6K Systems > Explorer",
      "Explorer > A.B. Data > Explorer",
      "Explorer > ACAI Associates > Explorer",
      "Explorer > AccountNow > Explorer",
      "Explorer > Addx > Explorer",
      "Explorer > Aerodyn Engineering > Explorer",
      "Explorer > AKA Media > Explorer",
      "Explorer > All American Swim Supply > Explorer",
      "Explorer > Area51-ESG > Explorer",
      "Explorer > ASK Staffing > Explorer",
      "Explorer > Aspen of DC > Explorer",
      "Explorer > BANC3 > Explorer",
      "Explorer > Barrack's Cater Inn > Explorer",
      "Explorer > Batteries Plus > Explorer",
      "Explorer > Burt Hill > Explorer",
      "Explorer > CablesAndKits.com > Explorer",
      "Explorer > Capinc > Explorer",
      "Explorer > Catch the Moment > Explorer",
      "Explorer > Cloud Creek Systems > Explorer",
      "Explorer > Concerro > Explorer",
      "Explorer > Data Systems Analysts > Explorer",
      "Explorer > Datawiz > Explorer",
      "Explorer > DealYard.com > Explorer",
      "Explorer > DNT Environmental Services > Explorer",
      "Explorer > Dorsey & Whitney > Explorer",
      "Explorer > Duffey Petrosky > Explorer",
      "Explorer > Essai > Explorer",
      "Explorer > Fidelity Technologies > Explorer",
      "Explorer > Fusion Systems > Explorer",
      "Explorer > Grandstream Networks > Explorer",
      "Explorer > Granite Telecommunications > Explorer",
      "Explorer > Harbinger Partners > Explorer",
      "Explorer > Haynes and Boone > Explorer",
      "Explorer > Info Retail > Explorer",
      "Explorer > Integrated Resources > Explorer",
      "Explorer > InterCon > Explorer",
      "Explorer > International Checkout > Explorer",
      "Explorer > Intueor Consulting > Explorer",
      "Explorer > Knowledge Mosaic > Explorer",
      "Explorer > Laser Technologies > Explorer",
      "Explorer > LawyerLink > Explorer",
      "Explorer > Logical Choice Technologies > Explorer",
      "Explorer > Logic Planet > Explorer",
      "Explorer > LogoSportswear.com > Explorer",
      "Explorer > Mansell Group > Explorer",
      "Explorer > Mantz Automation > Explorer",
      "Explorer > Maverick Networks > Explorer",
      "Explorer > Max Borges Agency > Explorer",
      "Explorer > Mediatavern > Explorer",
      "Explorer > Medical Transaction Billing > Explorer",
      "Explorer > Microdynamics Group > Explorer",
      "Explorer > Mobile One Courier & Logistics > Explorer",
      "Explorer > Novae > Explorer",
      "Explorer > Ovation Travel Group > Explorer",
      "Explorer > Paramore-Redd Online Marketing > Explorer",
      "Explorer > Post-Up Stand > Explorer",
      "Explorer > See Kai Run > Explorer",
      "Explorer > SLR Contracting & Service > Explorer",
      "Explorer > TBJ > Explorer",
      "Grammar Plus > Access Technology Solutions > Grammar Plus",
      "Grammar Plus > Alarm Team > Grammar Plus",
      "Grammar Plus > Ascentium > Grammar Plus",
      "Grammar Plus > Best Practice Systems > Grammar Plus",
      "Grammar Plus > Bulk TV & Internet > Grammar Plus",
      "Grammar Plus > ChiroNET > Grammar Plus",
      "Grammar Plus > Defender Direct > Grammar Plus",
      "Grammar Plus > Dialogue Marketing > Grammar Plus",
      "Grammar Plus > Direct Exteriors > Grammar Plus",
      "Grammar Plus > Fandotech > Grammar Plus",
      "Grammar Plus > Herndon Products > Grammar Plus",
      "Grammar Plus > IMS ExpertServices > Grammar Plus",
      "Grammar Plus > Nukk-Freeman & Cerra > Grammar Plus",
      "Grammar Plus > Physique 57 > Grammar Plus",
      "PhoenixSoft > Aspen of DC > PhoenixSoft",
      "PhoenixSoft > Brightree > PhoenixSoft",
      "PhoenixSoft > CallCopy > PhoenixSoft",
      "PhoenixSoft > Cellular Sales of Knoxville > PhoenixSoft",
      "PhoenixSoft > Central Coast Farms > PhoenixSoft",
      "PhoenixSoft > Decision Lens > PhoenixSoft",
      "PhoenixSoft > Geckotech > PhoenixSoft",
      "PhoenixSoft > Invertix > PhoenixSoft",
      "PhoenixSoft > LearnLive Technologies > PhoenixSoft",
      "PhoenixSoft > Logistic Dynamics > PhoenixSoft",
      "PhoenixSoft > Mustang Technology > PhoenixSoft",
      "PhoenixSoft > R2integrated > PhoenixSoft",
      "WonderKid > 1 Source Consulting > WonderKid",
      "WonderKid > AArrow Advertising > WonderKid",
      "WonderKid > AccountNow > WonderKid",
      "WonderKid > adaQuest > WonderKid",
      "WonderKid > Agency Consulting Group > WonderKid",
      "WonderKid > ArrowStream > WonderKid",
      "WonderKid > Ascendent Engineering & Safety Solutions > WonderKid",
      "WonderKid > Blaser's USA > WonderKid",
      "WonderKid > Brian Taylor International > WonderKid",
      "WonderKid > Cable Links Consulting > WonderKid",
      "WonderKid > Community Impact Newspaper > WonderKid",
      "WonderKid > Compass Solutions > WonderKid",
      "WonderKid > Consero > WonderKid",
      "WonderKid > Dennis Corporation > WonderKid",
      "WonderKid > Dialect Technologies > WonderKid",
      "WonderKid > DKW Communications > WonderKid",
      "WonderKid > Dukas Public Relations > WonderKid",
      "WonderKid > EcoTech Marine > WonderKid",
      "WonderKid > Evolve > WonderKid",
      "WonderKid > GameFly > WonderKid",
      "WonderKid > Great Expressions Dental Centers > WonderKid",
      "WonderKid > Infinity Roofing & Siding > WonderKid",
      "WonderKid > Invizion > WonderKid",
      "WonderKid > Logica > WonderKid",
      "WonderKid > Meso Group > WonderKid",
      "WonderKid > Millennium > WonderKid",
      "WonderKid > Monster Scooter Parts > WonderKid",
      "WonderKid > MyCEO > WonderKid",
      "WonderKid > Safety Sam > WonderKid",
      "WonderKid > SecurityMetrics > WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - single measure with one viewBy and one stackBy with multiple items 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "East Coast > Amount",
      "West Coast > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - single measure with two viewBy and stack 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 12,
    "attributes": 2,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > East Coast > Amount",
      "CompuSci > West Coast > Amount",
      "Educationly > East Coast > Amount",
      "Educationly > West Coast > Amount",
      "Explorer > East Coast > Amount",
      "Explorer > West Coast > Amount",
      "Grammar Plus > East Coast > Amount",
      "Grammar Plus > West Coast > Amount",
      "PhoenixSoft > East Coast > Amount",
      "PhoenixSoft > West Coast > Amount",
      "WonderKid > East Coast > Amount",
      "WonderKid > West Coast > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "Direct Sales",
      "Inside Sales",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - single measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - single measure with viewBy and stackBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 6,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > Amount",
      "Educationly > Amount",
      "Explorer > Amount",
      "Grammar Plus > Amount",
      "PhoenixSoft > Amount",
      "WonderKid > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "East Coast",
      "West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - single measure with viewBy and stackBy filtered to single stack 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 6,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > Amount",
      "Educationly > Amount",
      "Explorer > Amount",
      "Grammar Plus > Amount",
      "PhoenixSoft > Amount",
      "WonderKid > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 1,
    "attributes": 1,
    "sliceNames": Array [
      "East Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - single ratio measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount with Ratio",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - two measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - two measures with two viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 12,
    "attributes": 2,
    "sliceNames": Array [
      "CompuSci > East Coast",
      "CompuSci > West Coast",
      "Educationly > East Coast",
      "Educationly > West Coast",
      "Explorer > East Coast",
      "Explorer > West Coast",
      "Grammar Plus > East Coast",
      "Grammar Plus > West Coast",
      "PhoenixSoft > East Coast",
      "PhoenixSoft > West Coast",
      "WonderKid > East Coast",
      "WonderKid > West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - two measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - two measures with viewBy sorted by attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - two measures with viewBy sorted by measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "PhoenixSoft",
      "WonderKid",
      "Grammar Plus",
      "Educationly",
      "CompuSci",
      "Explorer",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ColumnChart - viewBy date and PoP measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Won Last Year",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 7,
    "attributes": 1,
    "sliceNames": Array [
      "2010",
      "2011",
      "2012",
      "2013",
      "2014",
      "2016",
      "2017",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - arithmetic measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - multiple measures and no viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - multiple primary and secondary measures with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 6,
    "attributes": 0,
    "measures": 6,
    "seriesNames": Array [
      " > Min Amount",
      " > Median Amount",
      " > Max Amount",
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - one primary and secondary measure no viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - one primary and secondary measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - one primary and secondary measure with viewBy sorted by attr 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - one primary and secondary measure with viewBy sorted by primary measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "Explorer",
      "CompuSci",
      "Educationly",
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - one primary and secondary measure with viewBy sorted by secondary measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "Explorer",
      "CompuSci",
      "Educationly",
      "Grammar Plus",
      "WonderKid",
      "PhoenixSoft",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - one primary measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - one primary measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - one secondary measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ComboChart - two secondary measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: DonutChart - arithmetic measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: DonutChart - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: DonutChart - single measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: DonutChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: DonutChart - two measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Execute - scoped series 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 1,
    "measures": 2,
    "seriesNames": Array [
      "East Coast > Amount",
      "East Coast > Won",
      "West Coast > Amount",
      "West Coast > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Execute - scoped series with slicing 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 1,
    "measures": 2,
    "seriesNames": Array [
      "East Coast > Amount",
      "East Coast > Won",
      "West Coast > Amount",
      "West Coast > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Execute - single unscoped series 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Execute - two unscoped series 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: FunnelChart - arithmetic measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Calculated 'Lost' measure",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: FunnelChart - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: FunnelChart - single measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: FunnelChart - single measure with viewBy sorted by attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: FunnelChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: FunnelChart - two measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Headline - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Headline - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Won",
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Headline - two measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Won",
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Headline - two measures one PoP 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Won",
      " > Won Last Year",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Headline - two measures with german separators 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Won",
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Heatmap - measure and columns 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 6,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "CompuSci > Amount",
      "Educationly > Amount",
      "Explorer > Amount",
      "Grammar Plus > Amount",
      "PhoenixSoft > Amount",
      "WonderKid > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Heatmap - measure and rows 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Heatmap - measure only 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Heatmap - measure, rows and columns 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "East Coast > Amount",
      "West Coast > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Heatmap - measure, rows and columns with null data points 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 7,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "2010 > Amount",
      "2011 > Amount",
      "2012 > Amount",
      "2013 > Amount",
      "2014 > Amount",
      "2016 > Amount",
      "2017 > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Heatmap - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "East Coast > Amount",
      "West Coast > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Heatmap - themed with null values 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 7,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "2010 > Amount",
      "2011 > Amount",
      "2012 > Amount",
      "2013 > Amount",
      "2014 > Amount",
      "2016 > Amount",
      "2017 > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - arithmetic measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 18,
    "attributes": 1,
    "sliceNames": Array [
      "Q1/2008",
      "Q2/2008",
      "Q3/2008",
      "Q4/2008",
      "Q1/2009",
      "Q2/2009",
      "Q3/2009",
      "Q4/2009",
      "Q1/2010",
      "Q2/2010",
      "Q3/2010",
      "Q4/2010",
      "Q1/2011",
      "Q2/2011",
      "Q3/2011",
      "Q4/2011",
      "Q1/2012",
      "Q2/2012",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - single measure with % and trendBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Win Rate",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 18,
    "attributes": 1,
    "sliceNames": Array [
      "Q1/2008",
      "Q2/2008",
      "Q3/2008",
      "Q4/2008",
      "Q1/2009",
      "Q2/2009",
      "Q3/2009",
      "Q4/2009",
      "Q1/2010",
      "Q2/2010",
      "Q3/2010",
      "Q4/2010",
      "Q1/2011",
      "Q2/2011",
      "Q3/2011",
      "Q4/2011",
      "Q1/2012",
      "Q2/2012",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - single measure with trendBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 18,
    "attributes": 1,
    "sliceNames": Array [
      "Q1/2008",
      "Q2/2008",
      "Q3/2008",
      "Q4/2008",
      "Q1/2009",
      "Q2/2009",
      "Q3/2009",
      "Q4/2009",
      "Q1/2010",
      "Q2/2010",
      "Q3/2010",
      "Q4/2010",
      "Q1/2011",
      "Q2/2011",
      "Q3/2011",
      "Q4/2011",
      "Q1/2012",
      "Q2/2012",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - single measure with trendBy and segmentBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 18,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "Q1/2008 > Amount",
      "Q2/2008 > Amount",
      "Q3/2008 > Amount",
      "Q4/2008 > Amount",
      "Q1/2009 > Amount",
      "Q2/2009 > Amount",
      "Q3/2009 > Amount",
      "Q4/2009 > Amount",
      "Q1/2010 > Amount",
      "Q2/2010 > Amount",
      "Q3/2010 > Amount",
      "Q4/2010 > Amount",
      "Q1/2011 > Amount",
      "Q2/2011 > Amount",
      "Q3/2011 > Amount",
      "Q4/2011 > Amount",
      "Q1/2012 > Amount",
      "Q2/2012 > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "East Coast",
      "West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 18,
    "attributes": 1,
    "sliceNames": Array [
      "Q1/2008",
      "Q2/2008",
      "Q3/2008",
      "Q4/2008",
      "Q1/2009",
      "Q2/2009",
      "Q3/2009",
      "Q4/2009",
      "Q1/2010",
      "Q2/2010",
      "Q3/2010",
      "Q4/2010",
      "Q1/2011",
      "Q2/2011",
      "Q3/2011",
      "Q4/2011",
      "Q1/2012",
      "Q2/2012",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - two measures with trendBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 18,
    "attributes": 1,
    "sliceNames": Array [
      "Q1/2008",
      "Q2/2008",
      "Q3/2008",
      "Q4/2008",
      "Q1/2009",
      "Q2/2009",
      "Q3/2009",
      "Q4/2009",
      "Q1/2010",
      "Q2/2010",
      "Q3/2010",
      "Q4/2010",
      "Q1/2011",
      "Q2/2011",
      "Q3/2011",
      "Q4/2011",
      "Q1/2012",
      "Q2/2012",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - two measures with trendBy and sort by attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 18,
    "attributes": 1,
    "sliceNames": Array [
      "Q2/2012",
      "Q1/2012",
      "Q4/2011",
      "Q3/2011",
      "Q2/2011",
      "Q1/2011",
      "Q4/2010",
      "Q3/2010",
      "Q2/2010",
      "Q1/2010",
      "Q4/2009",
      "Q3/2009",
      "Q2/2009",
      "Q1/2009",
      "Q4/2008",
      "Q3/2008",
      "Q2/2008",
      "Q1/2008",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: LineChart - two measures with trendBy and sort by measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 18,
    "attributes": 1,
    "sliceNames": Array [
      "Q1/2008",
      "Q2/2008",
      "Q3/2008",
      "Q1/2009",
      "Q4/2008",
      "Q1/2010",
      "Q3/2009",
      "Q2/2009",
      "Q4/2009",
      "Q2/2012",
      "Q2/2010",
      "Q1/2012",
      "Q4/2011",
      "Q2/2011",
      "Q4/2010",
      "Q3/2010",
      "Q1/2011",
      "Q3/2011",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: PieChart - arithmetic measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 0,
    "measures": 4,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
      " > Ratio of Won and Lost",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: PieChart - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: PieChart - single measure with viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: PieChart - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: PieChart - two measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: PivotTable - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: PivotTable - single measure with row attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: PivotTable - two measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ScatterPlot - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ScatterPlot - x and y axis measures and attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ScatterPlot - x and y axis measures and attribute with attr sorting 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "WonderKid",
      "PhoenixSoft",
      "Grammar Plus",
      "Explorer",
      "Educationly",
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ScatterPlot - x and y axis measures and attribute with nulls in data 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Win Rate",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 7,
    "attributes": 1,
    "sliceNames": Array [
      "2010",
      "2011",
      "2012",
      "2013",
      "2014",
      "2016",
      "2017",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ScatterPlot - x axis measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ScatterPlot - x axis measure and attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: ScatterPlot - y axis measure and attribute 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - arithmetic measures and segment 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 3,
    "attributes": 0,
    "measures": 3,
    "seriesNames": Array [
      " > Amount",
      " > Won",
      " > Calculated 'Lost' measure",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 18,
    "attributes": 1,
    "sliceNames": Array [
      "Q1/2008",
      "Q2/2008",
      "Q3/2008",
      "Q4/2008",
      "Q1/2009",
      "Q2/2009",
      "Q3/2009",
      "Q4/2009",
      "Q1/2010",
      "Q2/2010",
      "Q3/2010",
      "Q4/2010",
      "Q1/2011",
      "Q2/2011",
      "Q3/2011",
      "Q4/2011",
      "Q1/2012",
      "Q2/2012",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - single measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - single measure and segment 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 2,
    "attributes": 1,
    "sliceNames": Array [
      "East Coast",
      "West Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - single measure and viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - single measure and viewBy filtered to one element 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 1,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - single measure, viewBy and segment 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 12,
    "attributes": 2,
    "sliceNames": Array [
      "CompuSci > West Coast",
      "CompuSci > East Coast",
      "Educationly > West Coast",
      "Educationly > East Coast",
      "Explorer > West Coast",
      "Explorer > East Coast",
      "Grammar Plus > West Coast",
      "Grammar Plus > East Coast",
      "PhoenixSoft > West Coast",
      "PhoenixSoft > East Coast",
      "WonderKid > West Coast",
      "WonderKid > East Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Amount",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 12,
    "attributes": 2,
    "sliceNames": Array [
      "CompuSci > West Coast",
      "CompuSci > East Coast",
      "Educationly > West Coast",
      "Educationly > East Coast",
      "Explorer > West Coast",
      "Explorer > East Coast",
      "Grammar Plus > West Coast",
      "Grammar Plus > East Coast",
      "PhoenixSoft > West Coast",
      "PhoenixSoft > East Coast",
      "WonderKid > West Coast",
      "WonderKid > East Coast",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - two measures 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - two measures and segmentBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Treemap - two measures and viewBy 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 2,
    "attributes": 0,
    "measures": 2,
    "seriesNames": Array [
      " > Amount",
      " > Won",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 6,
    "attributes": 1,
    "sliceNames": Array [
      "CompuSci",
      "Educationly",
      "Explorer",
      "Grammar Plus",
      "PhoenixSoft",
      "WonderKid",
    ],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Xirr - correct config 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "2018 > Sample XIRR",
      "2019 > Sample XIRR",
      "2020 > Sample XIRR",
      "2021 > Sample XIRR",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Xirr - only measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 1,
    "attributes": 0,
    "measures": 1,
    "seriesNames": Array [
      " > Sample XIRR",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Xirr - semantically wrong measure 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 21,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "2000 > _Timeline [EOP]",
      "2001 > _Timeline [EOP]",
      "2002 > _Timeline [EOP]",
      "2003 > _Timeline [EOP]",
      "2004 > _Timeline [EOP]",
      "2005 > _Timeline [EOP]",
      "2006 > _Timeline [EOP]",
      "2007 > _Timeline [EOP]",
      "2008 > _Timeline [EOP]",
      "2009 > _Timeline [EOP]",
      "2010 > _Timeline [EOP]",
      "2011 > _Timeline [EOP]",
      "2012 > _Timeline [EOP]",
      "2013 > _Timeline [EOP]",
      "2014 > _Timeline [EOP]",
      "2015 > _Timeline [EOP]",
      "2016 > _Timeline [EOP]",
      "2017 > _Timeline [EOP]",
      "2018 > _Timeline [EOP]",
      "2019 > _Timeline [EOP]",
      "2020 > _Timeline [EOP]",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;

exports[`DataAccess should correctly identify series and slices for: Xirr - themed 1`] = `
Object {
  "seriesDigest": Object {
    "allSeries": 4,
    "attributes": 1,
    "measures": 1,
    "seriesNames": Array [
      "2018 > Sample XIRR",
      "2019 > Sample XIRR",
      "2020 > Sample XIRR",
      "2021 > Sample XIRR",
    ],
  },
  "slicesDigest": Object {
    "allSlices": 0,
    "attributes": 0,
    "sliceNames": Array [],
    "totals": 0,
  },
}
`;
